chore(gradle): change Minecraft version to 1.20.6 and add hikari lib